--- a/index.html
+++ b/index.html
@@ -258,20 +258,20 @@ button {
         class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s"
       >
-        <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <p class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
+        <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
+          <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
+            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
-          </p>
+          </h6>
         </a>
-        <button
-          type="button"
+        <P
+      style="cursor: pointer;"
           class="navbar-toggler me-4"
           data-bs-toggle="collapse"
           data-bs-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </P>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link active">Accueil</a>
@@ -377,7 +377,7 @@ button {
                       class="btn btn-primary py-2 px-3 animated slideInDown"
                       href=""
                     >
-                      visitez le site web
+                 DECOUVRIR
                       <div
                         class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
                       >
@@ -546,7 +546,7 @@ button {
     <div class="box large-box">
       <div class="flex-container">
         <span class="icon">&#9995;</span>
-        <button class="mui-button secondary"><a href="">HAND OF HOPE</a></button>
+        <button class="mui-button secondary"><a href="humanitaire.html">HAND OF HOPE</a></button>
       
       </div>
       <h1 class="title">Joignez-vous à nous pour façonner un monde meilleur.    <br>   <a class="btn btn-secondary" href="#">EN SAVOIR PLUS</a> <!-- Nouveau bouton --></h1>
@@ -575,11 +575,11 @@ BOUTIQUE
       <div class="flex-container">
         <span class="icon">&#128161;</span>
    
-        <button class="mui-button success"><a href="">LA MÉDITATION QUOTIDIENNE</a></button>
+        <button class="mui-button success"><a href="newsletter.html">LA MÉDITATION QUOTIDIENNE</a></button>
       
       </div>
       <span>29 Aoûts 2023</span>
-      <h1 class="title">Arrêtez de « tenir vos comptes »  <br>   <a class="btn btn-secondary" href="#">LIRE LA PENSÉE</a> <!-- Nouveau bouton --></h1>
+      <h1 class="title">Arrêtez de « tenir vos comptes »  <br>   <a class="btn btn-secondary" href="newsletter.html">LIRE LA PENSÉE</a> <!-- Nouveau bouton --></h1>
 
     </div>
     <div class="box tall-box important">
@@ -747,7 +747,7 @@ BOUTIQUE
             style="min-height: 400px"
           >
             <img
-              class="position-absolute w-100 h-100 pt-5 pe-5"
+              class="position-absolute w-100 h-100"
               src="img/about-1.jpg"
               alt=" S'unir pour Changer, Partager et Guider-1"
               style="object-fit: cover"
@@ -859,7 +859,7 @@ BOUTIQUE
             style="min-height: 400px"
           >
             <img
-              class="position-absolute w-100 h-100 pt-5 pe-5"
+              class="position-absolute w-100 h-100"
               src="img/about-5.jfif"
               alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-1"
               style="object-fit: cover; width: 100%"
@@ -879,7 +879,7 @@ BOUTIQUE
             style="min-height: 400px"
           >
             <img
-              class="position-absolute w-100 h-100 pt-5 pe-5"
+              class="position-absolute w-100 h-100"
               src="img/all7.jfif"
               alt="  Philharmonie La Grâce Parle-1"
               style="object-fit: cover"
@@ -1087,7 +1087,7 @@ BOUTIQUE
 
     <!-- Footer Start -->
     <div
-      class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
+      class="container-fluid bg-dark text-white-50 footer mt-5 fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
@@ -1160,7 +1160,7 @@ BOUTIQUE
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
                 <!-- <input
-                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  class="form-control bg-transparent w-100 py-3 ps-4 "
                   type="email"
                   id="emails"
                   name="email"
