--- a/about.html
+++ b/about.html
@@ -427,6 +427,150 @@
       </div>
     </div>
     <!-- About End -->
+    <!-- Service Start -->
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div
+          class="text-center mx-auto mb-5 wow fadeInUp"
+          data-wow-delay="0.1s"
+          style="max-width: 500px"
+        >
+          <div
+            class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+          >
+            Ce que nous faisons
+          </div>
+          <h1 class="display-6 mb-5">
+            Apprenez-en plus sur ce que nous faisons et impliquez-vous.
+          </h1>
+        </div>
+        <div class="row g-4 justify-content-center">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+              <img
+                class="img-fluid mb-4"
+                src="img/church.png"
+                alt="   Transformation des Vies par l'évangile de Christ"
+              />
+              <h4 class="mb-3">
+                Transformation des Vies par l'évangile de Christ.
+              </h4>
+              <p class="mb-4">
+                Nous changeons les Vies grâce à l'évangile transformateur de
+                Jésus-Christ.
+              </p>
+              <!-- <a class="btn btn-outline-primary px-3" href="">
+                         Lire la suite
+                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                              <i class="fa fa-arrow-right"></i>
+                          </div>
+                      </a> -->
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+              <img
+                class="img-fluid mb-4"
+                src="img/medical.png"
+                alt="Traitement médical"
+              />
+              <h4 class="mb-3">Traitement médical</h4>
+              <p class="mb-4">
+                Nous offrons des soins essentiels pour préserver votre santé.
+              </p>
+              <!-- <a class="btn btn-outline-primary px-3" href="">
+                         Lire la suite
+                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                              <i class="fa fa-arrow-right"></i>
+                          </div>
+                      </a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+              <img
+                class="img-fluid mb-4"
+                src="img/community.png"
+                alt="Développement communautaire"
+              />
+              <h4 class="mb-3">Développement communautaire</h4>
+              <p class="mb-4">Progression et lien au sein de la communauté.</p>
+              <!-- <a class="btn btn-outline-primary px-3" href="">
+                         Lire la suite
+                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                              <i class="fa fa-arrow-right"></i>
+                          </div>
+                      </a> -->
+            </div>
+          </div>
+        </div>
+        <div class="row g-4 justify-content-center">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+              <img
+                class="img-fluid mb-4"
+                src="img/icon-3.png"
+                alt="Eau potable pure"
+              />
+              <h4 class="mb-3">Eau potable pure</h4>
+              <p class="mb-4">
+                L'accès à l'eau potable pure est fondamental pour la santé
+                globale.
+              </p>
+              <!-- <a class="btn btn-outline-primary px-3" href="">
+                         Lire la suite
+                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                              <i class="fa fa-arrow-right"></i>
+                          </div>
+                      </a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+              <img
+                class="img-fluid mb-4"
+                src="img/icon-1.png"
+                alt="Éducation"
+              />
+              <h4 class="mb-3">Éducation</h4>
+              <p class="mb-4">
+                Acquisition de connaissances et compétences pour le
+                développement personnel.
+              </p>
+              <!-- <a class="btn btn-outline-primary px-3" href="">
+                         Lire la suite
+                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                              <i class="fa fa-arrow-right"></i>
+                          </div>
+                      </a> -->
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+              <img
+                class="img-fluid mb-4"
+                src="img/programm.png"
+                alt="Programmes d'autonomisation économique"
+              />
+              <h4 class="mb-3">Programmes d'autonomisation économique</h4>
+              <p class="mb-4">
+                Initiatives pour renforcer l'indépendance financière et le
+                développement personnel.
+              </p>
+              <!-- <a class="btn btn-outline-primary px-3" href="">
+                         Lire la suite
+                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                              <i class="fa fa-arrow-right"></i>
+                          </div>
+                      </a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Service End -->
 
     <!-- Footer Start -->
     <div
