--- a/contact.html
+++ b/contact.html
@@ -249,6 +249,13 @@
               pour vous fournir les réponses dont vous avez besoin et pour
               faciliter votre compréhension de notre mission et de nos actions.
             </p>
+            <p class="mb-4">
+              Pour devenir un partenaire, veuillez remplir le formulaire de
+              contact en sélectionnant l'option "Partenariats et Collaborations"
+              dans le champ "Sujet" et en fournissant toutes les informations
+              requises. Nous vous recontacterons rapidement pour discuter des
+              opportunités de collaboration.
+            </p>
             <p>
               Consulter notre liste de questions auxquelles nous avons déjà
               répondu
