--- a/newsletter.html
+++ b/newsletter.html
@@ -46,12 +46,13 @@
       }
 
       .message-box {
-        border: 2px solid #333;
+        /* border: 2px solid #333; */
         padding: 20px;
-        background-color: #ffc400; /* Nouvelle couleur de fond */
+        background: linear-gradient(135deg, #fff3d1, #ffdda1);
         border-radius: 10px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        max-width: 400px;
+        max-width: 600px;
+        margin: auto;
       }
 
       .message-title {
@@ -338,7 +339,10 @@
         libero tortor, tincidunt et, tincidunt eget, semper nec, quam.
       </p>
     </div>
-
+    <br />
+    <h1 id="subscribe" class="" style="text-align: center; background: #ffc400">
+      Abonnement à la newsletter!
+    </h1>
     <form id="subscribeForm">
       <p id="messageParagraph"></p>
       <label for="names">Nom* :</label>
