--- a/humanitaire.html
+++ b/humanitaire.html
@@ -339,6 +339,14 @@
                   <i class="fa fa-arrow-right"></i>
                 </div>
               </a>
+              <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+                Devenir un partenaire
+                <div
+                  class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+                >
+                  <i class="fa fa-arrow-right"></i>
+                </div>
+              </a>
             </div>
           </div>
         </div>
