--- a/humanitaire.html
+++ b/humanitaire.html
@@ -243,15 +243,9 @@
             >
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
-                src="img/about-1.jpg"
+                src="img/HELPTWO.jpg"
                 alt=" Service Humanitaire"
                 style="object-fit: cover"
-              />
-              <img
-                class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
-                src="img/about.jpg"
-                alt=" Service Humanitaire"
-                style="width: 200px; height: 200px"
               />
             </div>
           </div>
