--- a/contact.html
+++ b/contact.html
@@ -374,9 +374,11 @@
                       class="form-control"
                       required
                       id="phoneNumber"
-                      placeholder="Votre numéro de téléphone"
+                      placeholder="Votre numéro de téléphone avec l'indicatif du pays"
                     />
-                    <label for="phoneNumber">Numéro de téléphone</label>
+                    <label for="phoneNumber"
+                      >Votre numéro de téléphone avec l'indicatif du pays</label
+                    >
                   </div>
                 </div>
 
