--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       }
 
       .list-header {
-        /* background-image: url("./img/logo.jfif"); */
+        background-image: url("./img/icon-1.png");
+        background-repeat: no-repeat;
         background-position: center;
         min-height: 100px;
         color: #fff;
