--- a/index.html
+++ b/index.html
@@ -658,7 +658,10 @@ BOUTIQUE
       <div class="flex-container">
         <span class="icon">&#128722;</span>
    
-        <button class="mui-button danger"><a href="">BOUTIQUE</a></button>
+        <button class="mui-button danger"><a target="_blank" href="https://api.whatsapp.com/send?phone=53037832&text=`Nous sommes désireux d'acquérir ce livre pour enrichir notre collection personnelle et partager son contenu.
+          `
+          
+          ">BOUTIQUE</a></button>
       </div>
       <h1 class="title">  <a class="btn btn-secondary" href="#">EN SAVOIR PLUS</a> <!-- Nouveau bouton --></h1>
 
