--- a/faq.html
+++ b/faq.html
@@ -141,9 +141,9 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item"
+                <!-- <a href="service.html" class="dropdown-item"
                   >Nos différents services</a
-                >
+                > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
@@ -281,9 +281,7 @@
           <p>
             La Bible est la Parole inspirée de Dieu pour les chrétiens. Elle
             contient des enseignements, des histoires, des prophéties et des
-            conseils qui guident la foi et la vie chrétienne. Les chrétiens
-            considèrent la Bible comme une source d'autorité et de direction
-            spirituelle.
+            conseils qui guident la foi et la vie chrétienne.
           </p>
         </div>
       </div>
@@ -403,9 +401,8 @@
         <div class="answer">
           <p>
             Pour approfondir votre relation avec Dieu, nous recommandons la
-            prière régulière, la lecture de la Bible, la participation à des
-            groupes de prière et d'étude biblique, ainsi que la réflexion
-            personnelle. Nos sessions d'enseignement et nos retraites
+            prière régulière, la lecture de la Bible, la participation à nos
+            séances de prière Nos sessions d'enseignement et nos retraites
             spirituelles peuvent également être utiles pour nourrir votre foi.
           </p>
         </div>
@@ -419,8 +416,7 @@
         <div class="answer">
           <p>
             Les pratiques spirituelles comprennent la prière, l'étude biblique,
-            la méditation, le jeûne et la participation aux sacrements tels que
-            la communion et le baptême. Engagez-vous dans des disciplines
+            la méditation et le jeûne. Engagez-vous dans des disciplines
             spirituelles qui vous aident à grandir spirituellement et à vous
             rapprocher de Dieu.
           </p>
@@ -600,7 +596,6 @@
             Nous proposons une variété de ressources en ligne, y compris des
             articles, des études bibliques, des podcasts et des vidéos, pour
             vous aider à approfondir votre compréhension de la foi chrétienne.
-            Consultez notre section "Ressources" sur notre site web.
           </p>
         </div>
       </div>
@@ -614,8 +609,7 @@
           <p>
             Oui, nous offrons des enseignements en ligne ainsi que des sessions
             d'étude biblique virtuelles pour vous permettre d'apprendre et de
-            grandir dans votre foi depuis chez vous. Consultez notre calendrier
-            d'événements pour connaître nos prochaines sessions.
+            grandir dans votre foi depuis chez vous.
           </p>
         </div>
       </div>
@@ -686,7 +680,7 @@
             <h5 class="text-light mb-4">Liens rapides</h5>
             <a class="btn btn-link" href="about.html"> À propos</a>
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
-            <a class="btn btn-link" href="service.html">Nos services</a>
+            <!-- <a class="btn btn-link" href="service.html">Nos services</a> -->
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
             <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
