--- a/about.html
+++ b/about.html
@@ -142,9 +142,9 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item"
+                <!-- <a href="service.html" class="dropdown-item"
                   >Nos différents services</a
-                >
+                > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
@@ -229,11 +229,6 @@
     </div>
     <!-- Page Header End -->
 
-    <div
-      class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
-    >
-      À propos de nous
-    </div>
     <!-- About Start -->
     <div id="about" class="container-xxl py-5">
       <div class="container">
@@ -245,7 +240,7 @@
             >
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
-                src="img/about-1.jpg"
+                src="img/help.jpg"
                 alt=" S'unir pour Changer, Partager et Guider-1"
                 style="object-fit: cover"
               />
@@ -262,10 +257,10 @@
               <div
                 class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
               >
-                Ce que nous croyons
+                À propos de nous
               </div>
               <h1 class="display-6 mb-5">
-                Nous aidons les personnes dans le besoin dans le monde entier.
+                Changer le monde, un acte de bonté à la fois.
               </h1>
               <div
                 class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4"
@@ -571,7 +566,68 @@
       </div>
     </div>
     <!-- Service End -->
+    <div class="containers">
+      <div class="boxs box1s">
+        <div class="icons">
+          <span class="icon">&#128161;</span>
+          <button class="mui-button success">
+            <a href="newsletter.html">LA MÉDITATION QUOTIDIENNE</a>
+          </button>
+        </div>
+        <h2>Recevoir une méditation tous les jours</h2>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="newsletter.html#subscribe">JE MABONNE</a>
+        </button>
+      </div>
+      <div class="boxs box2s">
+        <button
+          style="
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: transparent;
 
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="contact.html">NOUS ÉCRIRE UN EMAIL</a>
+        </button>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="prayer.html">DEMANDER LA PRIÈRE</a>
+        </button>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="newsletter.html#subscribe">M’ABONNER À LA NEWSLETTER</a>
+        </button>
+      </div>
+    </div>
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
@@ -635,7 +691,7 @@
             <h5 class="text-light mb-4">Liens rapides</h5>
             <a class="btn btn-link" href="about.html"> À propos</a>
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
-            <a class="btn btn-link" href="service.html">Nos services</a>
+            <!-- <a class="btn btn-link" href="service.html">Nos services</a> -->
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
             <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
