--- a/humanitaire.html
+++ b/humanitaire.html
@@ -141,9 +141,9 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item"
+                <!-- <a href="service.html" class="dropdown-item"
                   >Nos différents services</a
-                >
+                > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
@@ -257,7 +257,7 @@
                 À propos de nous
               </div>
               <h1 class="display-6 mb-5">
-                Nous aidons les personnes dans le besoin dans le monde entier
+                Changer le monde, un acte de bonté à la fois.
               </h1>
               <div
                 class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4"
@@ -411,7 +411,7 @@
             <h5 class="text-light mb-4">Liens rapides</h5>
             <a class="btn btn-link" href="about.html"> À propos</a>
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
-            <a class="btn btn-link" href="service.html">Nos services</a>
+            <!-- <a class="btn btn-link" href="service.html">Nos services</a> -->
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
             <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
