--- a/service.html
+++ b/service.html
@@ -141,9 +141,9 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item active"
+                <!-- <a href="service.html" class="dropdown-item active"
                   >Nos différents services</a
-                >
+                > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
@@ -443,7 +443,7 @@
             <h5 class="text-light mb-4">Liens rapides</h5>
             <a class="btn btn-link" href="about.html"> À propos</a>
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
-            <a class="btn btn-link" href="service.html">Nos services</a>
+            <!-- <a class="btn btn-link" href="service.html">Nos services</a> -->
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
             <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
