--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ BOUTIQUE
       <div class="flex-container">
         <span class="icon">&#128161;</span>
    
-        <button class="mui-button success" style="color: #ccc;"><a href="newsletter.html">LA MÉDITATION QUOTIDIENNE</a></button>
+        <button class="mui-button success" style="color: #ccc;"><a href="newsletter.html">The daily mediation</a></button>
       
       </div>
     
@@ -742,7 +742,7 @@ BOUTIQUE
       <div class="icons">
 
         <span class="icon">&#128161;</span>
-        <button class="mui-button success"><a href="newsletter.html">LA MÉDITATION QUOTIDIENNE</a></button>
+        <button class="mui-button success"><a href="newsletter.html">The daily mediation</a></button>
       </div>
       <h2>Recevoir une méditation tous les jours</h2>
       <button style=" margin: 5px;  padding: 10px 20px;
