--- a/index.html
+++ b/index.html
@@ -237,12 +237,15 @@ button {
   font-size: 24px;
 
 }
+.decalage_button{
+  height: 120%;
+}
 
   
   .tall-box {
     height: 400px;
     width: 40%;
-    background-image: url("./img/fond.jpg");
+    background-image: url("./img/trimphe.png");
     background-size: cover;
     background-position: center;
   }
@@ -626,7 +629,7 @@ button {
         <span class="icon">&#9654;</span>
         <button class="mui-button primary"><a target="_blank" href="https://www.youtube.com/@lagraceparle8000">VIDÉO</a></button>
       </div>
-      <h1 class="title">Le triomphe de la foi (2/3)   <br>   <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=bz1RYsXxHmk&t=3s">VOIR LA VIDEO</a> <!-- Nouveau bouton --></h1>
+      <h1 class="title decalage_button"> <br>   <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=bz1RYsXxHmk&t=3s">VOIR LA VIDEO</a> <!-- Nouveau bouton --></h1>
 
 
       <!-- <h1 class="title">  Le triomphe de la foi !  <br>   <a target="_blank" class="btn btn-secondary" href="https://www.youtube.com/watch?v=bz1RYsXxHmk">VOIR LA VIDÉO</a> </h1> -->
