--- a/ministere.html
+++ b/ministere.html
@@ -14,10 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital@1&display=swap"
       rel="stylesheet"
     />
-
     <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -115,10 +114,10 @@
         data-wow-delay="0.1s"
       >
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <h1 class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
+          <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
+            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
-          </h1>
+          </h6>
         </a>
         <button
           type="button"
@@ -299,21 +298,16 @@
                 alt="  Le centre chrétien"
                 style="object-fit: cover"
               />
-              <img
+              <!-- <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
                 src="img/about-4.jfif"
                 alt="  Le centre chrétien"
                 style="width: 200px; height: 200px"
-              />
+              /> -->
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="h-100">
-              <div
-                class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
-              >
-                À propos de nous
-              </div>
               <h1 class="display-6 mb-5">
                 Épanouir les Cœurs : Cultiver l'Amour de Christ pour une Vie
                 Transformée
