--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital@1&display=swap"
       rel="stylesheet"
     />
-
     <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -115,10 +114,10 @@
         data-wow-delay="0.1s"
       >
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <h1 class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
+          <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
+            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
-          </h1>
+          </h6>
         </a>
         <button
           type="button"
@@ -257,9 +256,10 @@
               opportunités de collaboration.
             </p>
             <p>
-              Consulter notre liste de questions auxquelles nous avons déjà
-              répondu
-              <a href="faq.html">Notre liste de questions déjà répondues</a>
+              <a href="faq.html"
+                >Consulter notre liste de questions auxquelles nous avons déjà
+                répondu</a
+              >
             </p>
 
             <form id="subscribeForm">
@@ -375,9 +375,7 @@
                       id="phoneNumber"
                       placeholder="Votre numéro de téléphone avec l'indicatif du pays"
                     />
-                    <label for="phoneNumber"
-                      >Votre numéro de téléphone avec l'indicatif du pays</label
-                    >
+                    <label for="phoneNumber">Ex:+229 96000000</label>
                   </div>
                 </div>
 
