--- a/fanfare.html
+++ b/fanfare.html
@@ -14,8 +14,7 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital@1&display=swap" rel="stylesheet">
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -96,12 +95,12 @@
     class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
     data-wow-delay="0.1s"
   >
-    <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-      <h1 class="fw-bold text-primary m-0">
-        <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
-        La Grâce<span class="text-white"> Parle</span>
-      </h1>
-    </a>
+  <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
+    <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
+      <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
+      La Grâce<span class="text-white"> Parle</span>
+    </h6>
+  </a>
     <button
       type="button"
       class="navbar-toggler me-4"
