--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ button {
                 <a href="contact.html#subscribeForm" class="dropdown-item"
                   >Devenir partenaire</a
                 >
-                <a href="blog.html" class="dropdown-item">Blog d'article</a>
+      
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -395,7 +395,7 @@ button {
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le ministère de prière</a
+                  >Le centre de prière</a
                 >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
@@ -670,10 +670,10 @@ BOUTIQUE
         >
           Faire un don maintenant
         </div>
-        <h1 class="display-6 text-white mb-5">
+        <h1 class="display-6 text-black mb-5">
           Merci pour les résultats obtenus avec vous
         </h1>
-        <p style="color: black">
+        <p style="color: white">
           Faire un don maintenant, c'est plus qu'un simple geste généreux,
           c'est une action qui peut transformer des vies. En donnant aux
           personnes dans le besoin, nous devenons les artisans d'un
@@ -789,7 +789,7 @@ BOUTIQUE
                 <li style='text-align:justify'>Indiquez dans le message les détails du don en nature que vous souhaitez offrir.</li>
                
                 <li style='text-align:justify'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui unissent notre communauté chrétienne.</li>
-                <li>Consulter le formulaire et suivez les étapes indiquez : <a href='contact.html#subscribeForm'>Remplissez le formulaire</a></li>
+                <li>Consulter le formulaire et suivez les étapes indiquez : <a href='contact.html#subscribeForm' style="color: #FFC300;">Remplissez le formulaire</a></li>
               </ol>
               <p style='text-align:justify'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
             </div>
