--- a/about.html
+++ b/about.html
@@ -112,98 +112,105 @@
       </div>
 
       <nav
-        class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
-        data-wow-delay="0.1s"
+      class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
+      data-wow-delay="0.1s"
+    >
+      <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
+        <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
+          <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
+          La Grâce<span class="text-white"> Parle</span>
+        </h6>
+      </a>
+      <P
+    style="cursor: pointer;"
+        class="navbar-toggler me-4"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarCollapse"
       >
-        <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
-            La Grâce<span class="text-white"> Parle</span>
-          </h6>
-        </a>
-        <button
-          type="button"
-          class="navbar-toggler me-4"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link">Accueil</a>
-            <a href="about.html" class="nav-item nav-link active">À propos</a>
-            <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Soutien et Engagements</a
-              >
-              <div class="dropdown-menu m-0">
-                <!-- <a href="service.html" class="dropdown-item"
-                  >Nos différents services</a
-                > -->
-                <a href="donate.html" class="dropdown-item"
-                  >Faire un don à la fondation</a
-                >
-                <a href="blog.html" class="dropdown-item">Blog d'article</a>
-                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
-                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
-                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-              </div>
-            </div>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Nos actions</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item"
-                  >Le centre chrétien</a
-                >
-                <a href="fanfare.html" class="dropdown-item"
-                  >L'Orchestre Philharmonie</a
-                >
-                <a href="humanitaire.html" class="dropdown-item"
-                  >Aide Humanitaire et Education</a
-                >
-              </div>
-            </div>
+        <span class="navbar-toggler-icon"></span>
+      </P>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto p-4 p-lg-0">
+          <a href="index.html" class="nav-item nav-link ">Accueil</a>
+          <a href="about.html" class="nav-item nav-link active">À propos</a>
 
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Contactez-nous</a
+          <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
+          <div class="nav-item dropdown">
+            <a
+              href="#"
+              class="nav-link dropdown-toggle"
+              data-bs-toggle="dropdown"
+              >Soutien et Engagements</a
+            >
+            <div class="dropdown-menu m-0">
+              <!-- <a href="service.html" class="dropdown-item"
+                >Nos différents services</a
+              > -->
+              <a href="donate.html" class="dropdown-item"
+                >Faire un don à la fondation</a
               >
-              <div class="dropdown-menu m-0">
-                <a href="contact.html" class="dropdown-item"
-                  >Nous écrire un e-mail</a
-                >
-                <a href="newsletter.html" class="dropdown-item"
-                  >Abonnement a la newsletter</a
-                >
-                <a href="faq.html" class="dropdown-item">Faq</a>
-              </div>
+              <a href="contact.html#subscribeForm" class="dropdown-item"
+                >Devenir partenaire</a
+              >
+    
+              <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+              <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+              <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
             </div>
           </div>
-          <div class="d-none d-lg-flex ms-2">
-            <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-              Faire un don
-              <div
-                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+          <div class="nav-item dropdown">
+            <a
+              href="#"
+              class="nav-link dropdown-toggle"
+              data-bs-toggle="dropdown"
+              >Nos actions</a
+            >
+            <div class="dropdown-menu m-0">
+              <a href="ministere.html" class="dropdown-item"
+                >Le centre de prière</a
               >
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
+              <a href="fanfare.html" class="dropdown-item"
+                >L'Orchestre Philharmonie</a
+              >
+              <a href="humanitaire.html" class="dropdown-item"
+                >Aide Humanitaire et Education</a
+              >
+            </div>
+          </div>
+
+          <div class="nav-item dropdown">
+            <a
+              href="#"
+              class="nav-link dropdown-toggle"
+              data-bs-toggle="dropdown"
+              >Contactez-nous</a
+            >
+            <div class="dropdown-menu m-0">
+              <a href="contact.html" class="dropdown-item"
+                >Nous écrire un e-mail</a
+              >
+              <a href="newsletter.html" class="dropdown-item"
+                >Abonnement a la newsletter</a
+              >
+              <a href="prayer.html" class="dropdown-item"
+                >Demander une prière</a
+              >
+              <a href="faq.html" class="dropdown-item">Faq</a>
+            </div>
           </div>
         </div>
-      </nav>
+        <div class="d-none d-lg-flex ms-2">
+          <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+            Faire un don
+            <div
+              class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+            >
+              <i class="fa fa-arrow-right"></i>
+            </div>
+          </a>
+        </div>
+      </div>
+    </nav>
     </div>
     <!-- Navbar End -->
 
@@ -228,7 +235,28 @@
       </div>
     </div>
     <!-- Page Header End -->
-
+    <!-- Service Start -->
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div
+          class="text-center mx-auto mb-5 wow fadeInUp"
+          data-wow-delay="0.1s"
+          style="max-width: 500px"
+        >
+          <div
+            class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+          >
+            Ce que nous faisons
+          </div>
+          <h1 class="display-6 mb-5">
+            Apprenez-en plus sur ce que nous faisons et impliquez-vous.
+          </h1>
+        </div>
+        <button class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
+        </div>
+      </div>
+    </div>
+    <!-- Service End -->
     <!-- About Start -->
     <div id="about" class="container-xxl py-5">
       <div class="container">
@@ -422,150 +450,7 @@
       </div>
     </div>
     <!-- About End -->
-    <!-- Service Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div
-          class="text-center mx-auto mb-5 wow fadeInUp"
-          data-wow-delay="0.1s"
-          style="max-width: 500px"
-        >
-          <div
-            class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
-          >
-            Ce que nous faisons
-          </div>
-          <h1 class="display-6 mb-5">
-            Apprenez-en plus sur ce que nous faisons et impliquez-vous.
-          </h1>
-        </div>
-        <div class="row g-4 justify-content-center">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img
-                class="img-fluid mb-4"
-                src="img/church.png"
-                alt="   Transformation des Vies par l'évangile de Christ"
-              />
-              <h4 class="mb-3">
-                Transformation des Vies par l'évangile de Christ.
-              </h4>
-              <p class="mb-4">
-                Nous changeons les Vies grâce à l'évangile transformateur de
-                Jésus-Christ.
-              </p>
-              <!-- <a class="btn btn-outline-primary px-3" href="">
-                         Lire la suite
-                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                              <i class="fa fa-arrow-right"></i>
-                          </div>
-                      </a> -->
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img
-                class="img-fluid mb-4"
-                src="img/medical.png"
-                alt="Traitement médical"
-              />
-              <h4 class="mb-3">Traitement médical</h4>
-              <p class="mb-4">
-                Nous offrons des soins essentiels pour préserver votre santé.
-              </p>
-              <!-- <a class="btn btn-outline-primary px-3" href="">
-                         Lire la suite
-                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                              <i class="fa fa-arrow-right"></i>
-                          </div>
-                      </a> -->
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img
-                class="img-fluid mb-4"
-                src="img/community.png"
-                alt="Développement communautaire"
-              />
-              <h4 class="mb-3">Développement communautaire</h4>
-              <p class="mb-4">Progression et lien au sein de la communauté.</p>
-              <!-- <a class="btn btn-outline-primary px-3" href="">
-                         Lire la suite
-                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                              <i class="fa fa-arrow-right"></i>
-                          </div>
-                      </a> -->
-            </div>
-          </div>
-        </div>
-        <div class="row g-4 justify-content-center">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img
-                class="img-fluid mb-4"
-                src="img/icon-3.png"
-                alt="Eau potable pure"
-              />
-              <h4 class="mb-3">Eau potable pure</h4>
-              <p class="mb-4">
-                L'accès à l'eau potable pure est fondamental pour la santé
-                globale.
-              </p>
-              <!-- <a class="btn btn-outline-primary px-3" href="">
-                         Lire la suite
-                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                              <i class="fa fa-arrow-right"></i>
-                          </div>
-                      </a> -->
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img
-                class="img-fluid mb-4"
-                src="img/icon-1.png"
-                alt="Éducation"
-              />
-              <h4 class="mb-3">Éducation</h4>
-              <p class="mb-4">
-                Acquisition de connaissances et compétences pour le
-                développement personnel.
-              </p>
-              <!-- <a class="btn btn-outline-primary px-3" href="">
-                         Lire la suite
-                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                              <i class="fa fa-arrow-right"></i>
-                          </div>
-                      </a> -->
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img
-                class="img-fluid mb-4"
-                src="img/programm.png"
-                alt="Programmes d'autonomisation économique"
-              />
-              <h4 class="mb-3">Programmes d'autonomisation économique</h4>
-              <p class="mb-4">
-                Initiatives pour renforcer l'indépendance financière et le
-                développement personnel.
-              </p>
-              <!-- <a class="btn btn-outline-primary px-3" href="">
-                         Lire la suite
-                          <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                              <i class="fa fa-arrow-right"></i>
-                          </div>
-                      </a> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Service End -->
     <div class="containers">
       <div class="boxs box1s">
         <div class="icons">
