--- a/fanfare.html
+++ b/fanfare.html
@@ -92,100 +92,105 @@
   </div>
 
   <nav
-    class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
-    data-wow-delay="0.1s"
-  >
-  <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
-    <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
+  class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
+  data-wow-delay="0.1s"
+>
+  <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+    <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
       <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
       La Grâce<span class="text-white"> Parle</span>
     </h6>
   </a>
-    <button
-      type="button"
-      class="navbar-toggler me-4"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarCollapse"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <div class="navbar-nav ms-auto p-4 p-lg-0">
-        <a href="index.html" class="nav-item nav-link ">Accueil</a>
-        <a href="about.html" class="nav-item nav-link">À propos</a>
-        <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
-        <div class="nav-item dropdown">
-          <a
-            href="#"
-            class="nav-link dropdown-toggle"
-            data-bs-toggle="dropdown"
-            >Soutien et Engagements</a
-          >
-          <div class="dropdown-menu m-0">
-            <!-- <a href="service.html" class="dropdown-item"
-              >Nos différents services</a
-            > -->
-            <a href="donate.html" class="dropdown-item"
-              >Faire un don à la fondation</a
-            >
-            <a href="blog.html" class="dropdown-item "
-            >Blog d'article</a
-          >
-            <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
-            <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
-            <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-          </div>
-        </div>
-        <div class="nav-item dropdown">
-          <a
-            href="#"
-            class="nav-link dropdown-toggle active"
-            data-bs-toggle="dropdown"
-            >Nos actions</a
-          >
-          <div class="dropdown-menu m-0">
-            <a href="ministere.html" class="dropdown-item"
-              >Le centre chrétien</a
-            >
-            <a href="fanfare.html" class="dropdown-item active"
-              >L'Orchestre Philharmonie</a
-            >
-            <a href="humanitaire.html" class="dropdown-item"
-              >Aide Humanitaire et Education</a
-            >
-          </div>
-        </div>
+  <p
+    style="cursor: pointer"
+    class="navbar-toggler me-4"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarCollapse"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </p>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <div class="navbar-nav ms-auto p-4 p-lg-0">
+      <a href="index.html" class="nav-item nav-link">Accueil</a>
+      <a href="about.html" class="nav-item nav-link">À propos</a>
 
-        <div class="nav-item dropdown">
-          <a
-            href="#"
-            class="nav-link dropdown-toggle"
-            data-bs-toggle="dropdown"
-            >Contactez-nous</a
+      <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
+      <div class="nav-item dropdown">
+        <a
+          href="#"
+          class="nav-link dropdown-toggle "
+          data-bs-toggle="dropdown"
+          >Soutien et Engagements</a
+        >
+        <div class="dropdown-menu m-0">
+          <!-- <a href="service.html" class="dropdown-item"
+          >Nos différents services</a
+        > -->
+          <a href="donate.html" class="dropdown-item"
+            >Faire un don à la fondation</a
           >
-          <div class="dropdown-menu m-0">
-            <a href="contact.html" class="dropdown-item"
-              >Nous écrire un e-mail</a
-            >
-            <a href="newsletter.html" class="dropdown-item"
-              >Abonnement a la newsletter</a
-            >
-            <a href="faq.html" class="dropdown-item">Faq</a>
-          </div>
+          <a href="contact.html#subscribeForm" class="dropdown-item"
+            >Devenir partenaire</a
+          >
+
+          <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+          <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+          <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
         </div>
       </div>
-      <div class="d-none d-lg-flex ms-2">
-        <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-          Faire un don
-          <div
-            class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+      <div class="nav-item dropdown">
+        <a
+          href="#"
+          class="nav-link dropdown-toggle active "
+          data-bs-toggle="dropdown"
+          >Nos actions</a
+        >
+        <div class="dropdown-menu m-0">
+          <a href="ministere.html" class="dropdown-item"
+            >Le centre de prière</a
           >
-            <i class="fa fa-arrow-right"></i>
-          </div>
-        </a>
+          <a href="fanfare.html" class="dropdown-item active"
+            >L'Orchestre Philharmonie</a
+          >
+          <a href="humanitaire.html" class="dropdown-item"
+            >Aide Humanitaire et Education</a
+          >
+        </div>
+      </div>
+
+      <div class="nav-item dropdown">
+        <a
+          href="#"
+          class="nav-link dropdown-toggle "
+          data-bs-toggle="dropdown"
+          >Contactez-nous</a
+        >
+        <div class="dropdown-menu m-0">
+          <a href="contact.html" class="dropdown-item "
+            >Nous écrire un e-mail</a
+          >
+          <a href="newsletter.html" class="dropdown-item"
+            >Abonnement a la newsletter</a
+          >
+          <a href="prayer.html" class="dropdown-item"
+            >Demander une prière</a
+          >
+          <a href="faq.html" class="dropdown-item">Faq</a>
+        </div>
       </div>
     </div>
-  </nav>
+    <div class="d-none d-lg-flex ms-2">
+      <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+        Faire un don
+        <div
+          class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+        >
+          <i class="fa fa-arrow-right"></i>
+        </div>
+      </a>
+    </div>
+  </div>
+</nav>
 </div>
 <!-- Navbar End -->
 
