--- a/faq.html
+++ b/faq.html
@@ -120,18 +120,19 @@
             La Grâce<span class="text-white"> Parle</span>
           </h6>
         </a>
-        <button
-          type="button"
+        <p
+          style="cursor: pointer"
           class="navbar-toggler me-4"
           data-bs-toggle="collapse"
           data-bs-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </p>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
+
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
               <a
@@ -142,12 +143,15 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-                  >Nos différents services</a
-                > -->
+              >Nos différents services</a
+            > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
-                <a href="blog.html" class="dropdown-item">Blog d'article</a>
+                <a href="contact.html#subscribeForm" class="dropdown-item"
+                  >Devenir partenaire</a
+                >
+
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -162,7 +166,7 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le centre chrétien</a
+                  >Le centre de prière</a
                 >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
@@ -186,6 +190,9 @@
                 >
                 <a href="newsletter.html" class="dropdown-item"
                   >Abonnement a la newsletter</a
+                >
+                <a href="prayer.html" class="dropdown-item"
+                  >Demander une prière</a
                 >
                 <a href="faq.html" class="dropdown-item active">Faq</a>
               </div>
