--- a/newsletter.html
+++ b/newsletter.html
@@ -14,9 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital@1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
+
     <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -38,12 +39,6 @@
     <link href="css/style.css" rel="stylesheet" />
 
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-
       .message-box {
         /* border: 2px solid #333; */
         padding: 20px;
@@ -190,18 +185,19 @@
             La Grâce<span class="text-white"> Parle</span>
           </h6>
         </a>
-        <button
-          type="button"
+        <p
+          style="cursor: pointer"
           class="navbar-toggler me-4"
           data-bs-toggle="collapse"
           data-bs-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </p>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
+
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
               <a
@@ -212,12 +208,15 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-                  >Nos différents services</a
-                > -->
+              >Nos différents services</a
+            > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
-                <a href="blog.html" class="dropdown-item">Blog d'article</a>
+                <a href="contact.html#subscribeForm" class="dropdown-item"
+                  >Devenir partenaire</a
+                >
+
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -232,7 +231,7 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le centre chrétien</a
+                  >Le centre de prière</a
                 >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
@@ -256,6 +255,9 @@
                 >
                 <a href="newsletter.html" class="dropdown-item active"
                   >Abonnement a la newsletter</a
+                >
+                <a href="prayer.html" class="dropdown-item"
+                  >Demander une prière</a
                 >
                 <a href="faq.html" class="dropdown-item">Faq</a>
               </div>
