--- a/prayer.html
+++ b/prayer.html
@@ -180,29 +180,29 @@
           ></a>
         </div>
       </div>
-
       <nav
         class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s"
       >
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <h1 class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
+          <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
+            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
-          </h1>
+          </h6>
         </a>
-        <button
-          type="button"
+        <p
+          style="cursor: pointer"
           class="navbar-toggler me-4"
           data-bs-toggle="collapse"
           data-bs-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </p>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
+
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
               <a
@@ -213,12 +213,15 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-                  >Nos différents services</a
-                > -->
+              >Nos différents services</a
+            > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
-                <a href="blog.html" class="dropdown-item">Blog d'article</a>
+                <a href="contact.html#subscribeForm" class="dropdown-item"
+                  >Devenir partenaire</a
+                >
+
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -233,7 +236,7 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le centre chrétien</a
+                  >Le centre de prière</a
                 >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
@@ -259,8 +262,8 @@
                   >Abonnement a la newsletter</a
                 >
                 <a href="prayer.html" class="dropdown-item active"
-                  >Demander la prière
-                </a>
+                  >Demander une prière</a
+                >
                 <a href="faq.html" class="dropdown-item">Faq</a>
               </div>
             </div>
