--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
           margin: 20px;
           height: 700px;
         } 
+        .colorTexte{
+          color: black;
+        }
+        
       .box1s{
         height: 200px;
       }
@@ -174,7 +178,10 @@ button {
     display: flex; /* Utilisation de flex pour aligner côte à côte */
     align-items: center; /* Alignement vertical au centre */
   }
-  
+  .colorTexte{
+    color: white;
+    display: none;
+  }
   .action-button {
     margin-left: 10px; /* Espacement entre le span et le button */
     padding: 5px 10px;
@@ -456,9 +463,9 @@ button {
               <div class="container">
                 <div class="row justify-content-center">
                   <div class="col-lg-7 pt-5">
-                    <h1 class="display-4 text-white mb-3 animated slideInDown">
+                    <h2 class="display-4 text-white mb-3 animated slideInDown">
                       Éclairant les âmes perdues, Répandant l'amour de Christ.
-                    </h1>
+                    </h2>
                     <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
                       À travers l'amour du Christ, nous guidons les âmes
                       perdues, offrant espoir, réconfort et but pour illuminer
@@ -670,10 +677,10 @@ BOUTIQUE
         >
           Faire un don maintenant
         </div>
-        <h1 class="display-6 text-black mb-5">
+        <h1 class="display-6 text-white mb-5">
           Merci pour les résultats obtenus avec vous
         </h1>
-        <p style="color: white">
+        <p class="colorTexte" >
           Faire un don maintenant, c'est plus qu'un simple geste généreux,
           c'est une action qui peut transformer des vies. En donnant aux
           personnes dans le besoin, nous devenons les artisans d'un
