--- a/ministere.html
+++ b/ministere.html
@@ -50,6 +50,7 @@
 
       gtag("config", "G-FSM4EQJ2E1");
     </script>
+    <style></style>
   </head>
   <body>
     <!-- Spinner Start -->
@@ -219,7 +220,7 @@
     >
       <div class="container text-center">
         <h1 class="display-4 text-white animated slideInDown mb-4">
-          Ministère
+          Le centre La Grâce Parle
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
@@ -230,7 +231,7 @@
               <a class="text-white" href="#">Nos Actions</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Le centre chrétien
+              Le centre La Grâce Parle
             </li>
           </ol>
         </nav>
