--- a/contact.html
+++ b/contact.html
@@ -218,9 +218,9 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center">
-        <h1 class="display-4 text-white animated slideInDown mb-4">
+        <h3 class="display-4 text-white animated slideInDown mb-4">
           Contactez-nous
-        </h1>
+        </h3>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
@@ -246,9 +246,9 @@
             >
               Contactez-nous
             </div>
-            <h1 class="display-6 mb-5">
+            <h3>
               Si vous avez des questions, veuillez nous contacter
-            </h1>
+            </h3>
             <p class="mb-4">
               Si vous avez des questions ou désirez obtenir de plus amples
               informations, veuillez simplement nous contacter. Nous sommes là
@@ -256,11 +256,21 @@
               faciliter votre compréhension de notre mission et de nos actions.
             </p>
             <p class="mb-4">
+           <p style="font-weight: bolder;">   <img src="./img/partner.png" width="80" alt="" srcset="" /> Devenir un partenaire ?</p>
+         
               Pour devenir un partenaire, veuillez remplir le formulaire de
               contact en sélectionnant l'option "Partenariats et Collaborations"
               dans le champ "Sujet" et en fournissant toutes les informations
               requises. Nous vous recontacterons rapidement pour discuter des
               opportunités de collaboration.
+            </p>
+            <p class="mb-4">
+              <p style="font-weight: bolder;">   <img src="./img/benevolat.png" width="80" alt="" srcset="" /> Devenir un bénévolat ?</p>Pour
+              devenir un bénévolat, veuillez remplir le formulaire de contact en
+              sélectionnant l'option "Bénévolats et Collaborations" dans le
+              champ "Sujet" et en fournissant toutes les informations requises.
+              Nous vous recontacterons rapidement pour discuter des opportunités
+              de collaboration.
             </p>
             <p>
               <a href="faq.html"
@@ -340,6 +350,9 @@
                       </option>
                       <option value="Partenariats et Collaborations">
                         Partenariats et Collaborations
+                      </option>
+                      <option value=" Bénévolats et Collaborations">
+                        Bénévolats et Collaborations
                       </option>
                       <option value="Ressources et Enseignements">
                         Ressources et Enseignements
