--- a/humanitaire.html
+++ b/humanitaire.html
@@ -219,7 +219,7 @@
     >
       <div class="container text-center">
         <h1 class="display-4 text-white animated slideInDown mb-4">
-          Service Humanitaire
+          Service Humanitaire et Education
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
@@ -261,7 +261,7 @@
           campagnes pour sensibiliser le public aux enjeux liés à la
           réhabilitation.
         </p>
-        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://64e605ddd133fb0ec74c9b9f--clinquant-empanada-50cf63.netlify.app/">
+        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="contact.html">
         Devenir un bénévolat
               <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                   <i class="fa fa-arrow-right"></i>
@@ -291,7 +291,7 @@
           initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins,
           un acte de bonté à la fois.
         </p>
-        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://64e605ddd133fb0ec74c9b9f--clinquant-empanada-50cf63.netlify.app/">
+        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://me.fedapay.com/wP6ip9Oe">
          Faire un don
                 <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                     <i class="fa fa-arrow-right"></i>
@@ -316,16 +316,7 @@
         <h1 class="display-6 text-white mb-5">
           Merci pour les résultats obtenus avec vous
         </h1>
-        <p class="colorTexte" >
-          Faire un don maintenant, c'est plus qu'un simple geste généreux,
-          c'est une action qui peut transformer des vies. En donnant aux
-          personnes dans le besoin, nous devenons les artisans d'un
-          changement positif et significatif dans leur existence. Chaque
-          don, aussi modeste soit-il, peut contribuer à fournir une aide
-          essentielle, qu'il s'agisse de nourriture pour les affamés, d'eau
-          potable pour les assoiffés, de soins médicaux pour les malades, ou
-          d'éducation pour les enfants démunis.
-        </p>
+      
       </div>
       <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
         <div class="h-100 bg-secondary p-5">
@@ -351,7 +342,12 @@
             </div>
             <h3>Don En Espèce</h3>
             <div class="col-12">
-              <button class="mui-button secondary-button"><a href="https://me.fedapay.com/wP6ip9Oe" target="_blank">Faire un don</a></button>
+              <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://me.fedapay.com/wP6ip9Oe">
+                Faire un don
+                       <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                           <i class="fa fa-arrow-right"></i>
+                       </div>
+                   </a>
               <!-- <button id="donateButton" class="btn btn-primary px-5" style="height: 60px">
                <a style="color: black; " target="_blank" href="https://me.fedapay.com/wP6ip9Oe">Faire un don</a>
                 <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
